--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,12 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "css": ["background.css"],
-      "js": ["contentScript.js"]
+      "css": ["popup.css"]
     }
   ],
   "action": {
     "default_title": "Does a thing when you do a thing",
-    "default_popup": "index.html",
+    "default_popup": "popup.html",
     "default_icon": {
       "32": "icons/icon32.png"
     }
