--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Codesmith Extension",
-  "version": "0.0.1",
-  "description": "This is a sample description",
-  "short_name": "Codesmith",
+  "name": "Piano cypher - Password Encrypter",
+  "version": "0.0.3",
+  "description": "Encrypt any message with a musical cypher",
+  "short_name": "Piano cypher",
   "permissions": ["activeTab", "declarativeContent", "storage", "scripting"],
   "background": {
     "service_worker": "background.js"
@@ -11,14 +11,15 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "css": ["popup.css"]
+      "css": ["popup.css"],
+      "js": ["contentScript.js"]
     }
   ],
   "action": {
-    "default_title": "Does a thing when you do a thing",
+    "default_title": "Open the cypher",
     "default_popup": "popup.html",
     "default_icon": {
-      "32": "icons/icon32.png"
+      "32": "icons/piano2.png"
     }
   }
 }
